fixed z-index issue with navar-brand

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,6 +35,12 @@
  |--------------------------------------------------------------------------
  */
 /**
+ * Navbar
+ */
+.navbar-brand {
+  z-index: 1; }
+
+/**
  * Panels
  */
 .panel-slim {
